--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 /Tp5_productos/nbproject/private/
 /Tp5_productos/build/
+/Tp6_detodo/nbproject/private/
+/Tp6_detodo/build/
